# llm-robot-control

./: README.md  requirements.txt
ros2_ai_agent/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ai_agent/launch/: start_generic_agent.launch.py  start_generic_agent.py  start_robotic_arm_agent.launch.py  start_turtlesim_agent.launch.py
ros2_ai_agent/ros2_ai_agent/: ros2_ai_agent_robotic_arm.py  ros2_ai_agent_turtlesim.py
ros2_ai_agent/srv/: SetLlmMode.srv
ros2_ai_eval/: package.xml  setup.cfg  setup.py
ros2_ai_eval/launch/: evaluate_turtlesim_agent.launch.py
ros2_ai_eval/ros2_ai_eval/: ros2_ai_eval.py
ros2_ai_eval/tasks/: models_01.csv  models_01_gpt-4.csv  models_01_qwen2.csv  models_02_qwen2.5_qwen3.csv  models_15.csv  tasks_04_turtlesim.csv
ros2_ai_interfaces/: CMakeLists.txt  package.xml
